--- a/build.yaml
+++ b/build.yaml
@@ -4,12 +4,12 @@ targets:
       source_gen|combining_builder:
         options:
           build_extensions:
-            "{{dir}}/{{file}}.dart": "{{dir}}/generated/{{file}}.g.dart"
+            "{{dir}}/{{file}}.dart": "{{dir}}/{{file}}.g.dart"
           include:
-            - lib/**/model/*.dart
+            - lib/**/*.dart
       freezed:
         options:
           build_extensions:
-            "{{dir}}/{{file}}.dart": "{{dir}}/generated/{{file}}.freezed.dart"
+            "{{dir}}/{{file}}.dart": "{{dir}}/{{file}}.freezed.dart"
           include:
-            - lib/**/model/*.dart
+            - lib/**/*.dart
