--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio_cookie_manager: ^2.1.4
   flutter_inappwebview: ^5.7.2+3
   flutter_riverpod: ^2.3.2
+  riverpod_annotation: ^2.0.1
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
   import_sorter: ^4.6.0
@@ -61,6 +62,9 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
+  custom_lint: ^0.3.2
+  riverpod_generator: ^2.1.3
+  riverpod_lint: ^1.1.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
