--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   cached_network_image: ^3.2.3
   cookie_jar: ^3.0.1
   cupertino_icons: ^1.0.5
-  dio: ^5.1.1
-  dio_cookie_manager: ^2.1.4
+
+  dio: ^4.0.6
+  dio_cookie_manager: ^2.0.0
   flutter_inappwebview: ^5.7.2+3
   flutter_riverpod: ^2.3.2
   riverpod_annotation: ^2.0.1
@@ -49,6 +50,8 @@ dependencies:
   intl: ^0.17.0
   flutter_localizations:
     sdk: flutter
+  twitter_openapi_dart:
+    path: ../twitter_openapi_dart
 
 dev_dependencies:
   flutter_test:
