--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   collection: ^1.17.0
   cupertino_icons: ^1.0.5
   dio: ^5.1.1
+  drift: ^2.9.0
   fl_chart: ^0.63.0
   flutter:
     sdk: flutter
@@ -22,11 +23,12 @@ dependencies:
   json_annotation: ^4.8.0
   logger: ^1.3.0
   package_info_plus: ^4.0.2
-  path: ^1.8.2
-  path_provider: ^2.0.14
+  path: ^1.8.3
+  path_provider: ^2.0.15
   riverpod_annotation: ^2.0.1
   shared_preferences: ^2.0.15
   sqflite: ^2.2.7
+  sqlite3_flutter_libs: ^0.5.15
   twitter_openapi_dart: ^0.0.4
   twitter_openapi_dart_generated: any
   url_launcher: ^6.1.11
@@ -34,6 +36,7 @@ dependencies:
 dev_dependencies:
   build_runner: ^2.3.3
   custom_lint: ^0.4.0
+  drift_dev: ^2.9.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
