--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: ^2.3.2
+  freezed_annotation: ^2.2.0
   intl: ^0.18.0
   json_annotation: ^4.8.0
   logger: ^1.3.0
@@ -34,12 +35,13 @@ dependencies:
   url_launcher: ^6.1.11
 
 dev_dependencies:
-  build_runner: ^2.3.3
+  build_runner: ^2.4.5
   custom_lint: ^0.4.0
   drift_dev: ^2.9.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.5
   json_serializable: ^6.6.1
   pedantic_mono: any
   riverpod_generator: ^2.1.3
