--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,14 +1,17 @@
-# include: package:flutter_lints/flutter.yaml
+# https://pub.dev/packages/pedantic_mono
 include: package:pedantic_mono/analysis_options.yaml
 
-linter:
-  rules:
-    use_build_context_synchronously: false
-    lines_longer_than_80_chars: false
-
 analyzer:
-  errors:
-    invalid_annotation_target: ignore
+  plugins:
+    - custom_lint
   exclude:
     - "**/*.freezed.dart"
     - "**/*.g.dart"
+    - "**/*.gr.dart"
+    - "**/*.mocks.dart"
+  errors:
+    invalid_annotation_target: ignore
+
+linter:
+  rules:
+    lines_longer_than_80_chars: false
