--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,47 +8,50 @@ environment:
 
 dependencies:
   auto_route: ^8.0.3
-  cached_network_image: ^3.2.3
-  collection: ^1.17.0
-  cupertino_icons: ^1.0.5
-  dio: ^5.1.1
-  drift: ^2.9.0
+  cached_network_image: ^3.3.1
+  collection: ^1.18.0
+  cupertino_icons: ^1.0.6
+  dio: ^5.4.2
+  drift: ^2.16.0
   fl_chart: ^0.67.0
   flutter:
     sdk: flutter
   flutter_hooks: ^0.20.5
-  flutter_inappwebview: ^5.7.2+3
+  flutter_inappwebview: ^6.0.0
   flutter_localizations:
     sdk: flutter
-  flutter_secure_storage: ^4.2.1
-  freezed_annotation: ^2.2.0
+  flutter_secure_storage: ^9.0.0
+  freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.5.1
-  intl: ^0.18.0
-  json_annotation: ^4.8.0
+  intl: ^0.19.0
+  json_annotation: ^4.8.1
   logger: ^2.2.0
   package_info_plus: ^7.0.0
   path: ^1.8.3
-  path_provider: ^2.0.15
-  riverpod_annotation: ^2.0.1
-  shared_preferences: ^2.0.15
-  sqflite: ^2.2.7
-  sqlite3_flutter_libs: ^0.5.15
-  twitter_openapi_dart: ^0.0.4
-  twitter_openapi_dart_generated: any
-  url_launcher: ^6.1.11
+  path_provider: ^2.1.3
+  riverpod_annotation: ^2.3.5
+  shared_preferences: ^2.2.3
+  sqflite: ^2.3.3
+  sqlite3_flutter_libs: ^0.5.20
+  twitter_openapi_dart: ^0.0.11
+  twitter_openapi_dart_generated: ^0.0.14
+  url_launcher: ^6.2.6
+
+dependency_overrides:
+  intl: ^0.19.0
 
 dev_dependencies:
   auto_route_generator: ^8.0.0
-  build_runner: ^2.4.5
+  build_runner: ^2.4.9
   custom_lint: ^0.6.4
-  drift_dev: ^2.9.0
+  drift_dev: ^2.16.0
   flutter_lints: ^3.0.2
   flutter_test:
     sdk: flutter
-  freezed: ^2.3.5
-  json_serializable: ^6.6.1
+  freezed: ^2.5.2
+  json_serializable: ^6.7.1
   pedantic_mono: any
-  riverpod_generator: ^2.1.3
+  riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
 
 flutter:
