--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.0.0
+  flutter_web_plugins:
+    sdk: flutter
   freezed_annotation: ^2.4.1
   hooks_riverpod: ^2.5.1
   intl: ^0.19.0
@@ -29,6 +31,7 @@ dependencies:
   package_info_plus: ^7.0.0
   path: ^1.8.3
   path_provider: ^2.1.3
+  pretty_dio_logger: ^1.3.1
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
   sqflite: ^2.3.3
