--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_web_plugins:
     sdk: flutter
   freezed_annotation: ^2.4.1
+  google_fonts: ^6.2.0
   hooks_riverpod: ^2.5.1
   intl: ^0.19.0
   json_annotation: ^4.8.1
