--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   fl_chart: ^0.67.0
   flutter:
     sdk: flutter
+  flutter_foreground_task: ^6.1.3
   flutter_hooks: ^0.20.5
   flutter_inappwebview: ^6.0.0
   flutter_localizations:
