--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   pretty_dio_logger: ^1.3.1
   riverpod_annotation: ^2.3.5
   shared_preferences: ^2.2.3
+  slang: ^3.30.2
+  slang_flutter: ^3.30.0
   sqflite: ^2.3.3
   sqlite3_flutter_libs: ^0.5.20
   twitter_openapi_dart: ^0.0.11
@@ -58,6 +60,7 @@ dev_dependencies:
   pedantic_mono: any
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
+  slang_build_runner: ^3.30.0
 
 flutter:
   uses-material-design: true
