--- a/slang.yaml
+++ b/slang.yaml
@@ -8,6 +8,7 @@ imports:
   - "package:social_doge/infrastructure/database/data.dart"
   - "package:social_doge/util/latin.dart"
   - "package:social_doge/provider/db/db.dart"
+  - "package:dio/dio.dart"
 
 contexts:
   ThemeMode:
@@ -23,4 +24,6 @@ contexts:
   SortType:
     generate_enum: false
   SortBy:
+    generate_enum: false
+  DioExceptionType:
     generate_enum: false
